--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -1,15 +1,15 @@
 .home-page {
-	margin: 20px;
+	margin: 0 20px 20px 20px;
 }
 
 @media screen and (min-width: 768px) {
 	.home-page {
-		margin: 40px;
+		margin: 0 40px 40px 40px;
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.home-page {
-		margin: 40px auto;
+		margin: 0 auto 40px auto;
 	}
 }
