--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -1,5 +1,5 @@
 .home-page {
-	margin: 0 20px 20px 20px;
+	margin: 0 0 20px 0;
 	display: flex;
 	flex-direction: column;
 	gap: 20px;
@@ -7,8 +7,8 @@
 
 @media screen and (min-width: 768px) {
 	.home-page {
-		margin: 0 40px 40px 40px;
-    gap: 30px;
+		margin: 0 auto 40px auto;
+		gap: 30px;
 	}
 }
 
