--- a/client/src/pages/ContentPage/ContentPage.css
+++ b/client/src/pages/ContentPage/ContentPage.css
@@ -1,5 +1,5 @@
 .content-page {
-	margin: 0 20px;
+	margin: 20px 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -43,6 +43,6 @@
 		flex-direction: column;
 		gap: 15px;
 		width: 70%;
-		margin: 0 auto;
+		margin: 40px auto;
 	}
 }
