--- a/client/src/pages/ServicePage/ServicePage.css
+++ b/client/src/pages/ServicePage/ServicePage.css
@@ -1,5 +1,5 @@
 .service-page {
-	margin: 0 20px;
+	margin: 20px 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -34,6 +34,6 @@
 
 	.service-description-container {
 		width: 70%;
-		margin: 0 auto;
+		margin: 40px auto;
 	}
 }
