--- a/client/src/components/Card/Card.css
+++ b/client/src/components/Card/Card.css
@@ -12,7 +12,7 @@
 	margin: 0 0 2rem 0;
 	border-radius: 25px;
 	/* just for test for now */
-	border: 1px solid var(--black);
+	border: 1px solid var(--gray60);
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
 }
