--- a/client/src/pages/ServicesPage/components/Services/Services.css
+++ b/client/src/pages/ServicesPage/components/Services/Services.css
@@ -9,7 +9,7 @@
 	margin-bottom: 1rem;
 	/* create temporarily visibility of card */
 	padding: 20px 20px;
-	border: 1px solid var(--black);
+	border: 1px solid var(--gray60);
 	border-radius: 15px;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 	transition: all 0.2s ease-in-out;
