--- a/client/src/pages/ServicePage/ServicePage.css
+++ b/client/src/pages/ServicePage/ServicePage.css
@@ -1,5 +1,5 @@
 .service-page {
-	margin: 20px 20px;
+	margin: 20px;
 	display: flex;
 	flex-direction: column;
 	gap: 10px;
@@ -18,8 +18,19 @@
 	object-fit: cover;
 }
 
+.service-category-tag-container {
+	display: flex;
+	justify-content: space-between;
+}
+
+.service-category-tag-container p {
+	font-weight: 600;
+}
+
 .service-content-container {
-	/* placeholder */
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
 }
 
 .go-back-button {
@@ -33,11 +44,18 @@
 
 @media screen and (min-width: 768px) {
 	.service-page {
+		margin: 40px auto;
 		gap: 15px;
 	}
 
+	.service-category-tag-container {
+		margin: 0 auto;
+		width: 75%;
+	}
+
 	.service-content-container {
-		width: 70%;
-		margin: 40px auto;
+		/* repeated because likely to be different from above */
+		margin: 0 auto;
+		width: 75%;
 	}
 }
