--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -46,9 +46,20 @@ body {
 	overflow-x: hidden; /* this is to prevent the content jumping left when a scroll bar appears */
 }
 
+#root {
+	min-height: 100vh;
+	display: flex;
+	flex-direction: column;
+}
+
 main {
-	margin: 0 auto;
+	width: 100%;
 	max-width: 1200px;
+	margin: 0 auto;
+}
+
+footer {
+	margin-top: auto;
 }
 
 /* h1's are usually the Page title/heading at the top of the Page */
