--- a/client/src/pages/ContentPage/ContentPage.css
+++ b/client/src/pages/ContentPage/ContentPage.css
@@ -16,15 +16,40 @@
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
+	border-radius: 10px;
 }
 
-.content-page-category-date-container {
+.content-page-category-tags-date-container {
 	display: flex;
 	justify-content: space-between;
 }
 
-.content-page-category-date-container p {
+.content-page-category-tags-date-container span {
 	font-weight: 600;
+}
+
+.content-page-category {
+	padding: 0.2rem 0.5rem;
+	border-radius: 25px;
+	background-color: var(--gray80);
+}
+
+.content-page-tags-container {
+	display: flex;
+	gap: 4px;
+	padding: 0.2rem 0.5rem;
+	border-radius: 25px;
+	background-color: var(--gray70);
+}
+
+.content-page-tag {
+	/* placeholder */
+}
+
+.content-page-date {
+	padding: 0.2rem 0.5rem;
+	border-radius: 25px;
+	background-color: var(--gray90);
 }
 
 .content-page-content-container {
@@ -41,11 +66,11 @@
 
 @media screen and (min-width: 768px) {
 	.content-page {
-		margin: 40px auto;
+		margin: 40px 20px;
 		gap: 15px;
 	}
 
-	.content-page-category-date-container {
+	.content-page-category-tags-date-container {
 		margin: 0 auto;
 		width: 75%;
 	}
