--- a/client/src/pages/ServicePage/ServicePage.css
+++ b/client/src/pages/ServicePage/ServicePage.css
@@ -1,15 +1,19 @@
 .service-page {
 	margin: 20px;
+	position: relative;
+}
+
+/* container children: image, category/tags/data, content */
+.service-page-subcontainer {
+	margin: 0 auto;
 	display: flex;
 	flex-direction: column;
-	gap: 10px;
-	position: relative;
+	align-items: center;
+	gap: 20px;
 }
 
 .service-page-image-container {
 	width: 280px;
-	margin: 0 auto;
-	display: block;
 }
 
 .service-page-image {
@@ -20,7 +24,9 @@
 }
 
 .service-page-category-tag-container {
+	width: 100%;
 	display: flex;
+	flex-wrap: wrap;
 	justify-content: space-between;
 }
 
@@ -65,17 +71,15 @@
 @media screen and (min-width: 768px) {
 	.service-page {
 		margin: 40px 20px;
-		gap: 15px;
 	}
 
-	.service-page-category-tag-container {
-		margin: 0 auto;
-		width: 75%;
+	.service-page-subcontainer {
+		width: 80%;
 	}
+}
 
-	.service-page-content-container {
-		/* repeated because likely to be different from above */
-		margin: 0 auto;
-		width: 75%;
+@media screen and (min-width: 1200px) {
+	.service-page {
+		margin: 40px auto;
 	}
 }
