--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -101,6 +101,17 @@ p {
 	}
 }
 
+span {
+	font-size: 14px;
+	line-height: 1.6;
+}
+
+@media screen and (min-width: 768px) {
+	span {
+		font-size: 16px;
+	}
+}
+
 /* Custom Classes */
 
 /* This is the loading icon animation that displays inside the Submit Button when a Form is being Submitted */
