--- a/client/src/pages/HomePage/components/HomeGetInvolvedSection/HomeGetInvolvedSection.css
+++ b/client/src/pages/HomePage/components/HomeGetInvolvedSection/HomeGetInvolvedSection.css
@@ -1,63 +1,168 @@
 .home-get-involved-section {
-	margin: 0 20px;
+	/* margin: 0 20px; */
+	background: linear-gradient(0deg, hsl(108, 20%, 30%), var(--green09));
+	border-bottom: 6px solid var(--green12);
 }
 
-.home-get-involved-section > h2 {
+.home-get-involved-title {
 	text-align: center;
-}
-
-.home-get-involved-section > p {
-	text-align: center;
+	color: var(--green10);
+	margin-top: 20px;
 	margin-bottom: 20px;
 }
 
-.home-get-involved-links-container {
-	display: flex;
-	justify-content: center;
-	gap: 20px;
+.home-get-involved-cards-container {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: 1fr 1fr;
+	row-gap: 20px;
+	padding-bottom: 20px;
 }
 
-.home-get-involved-link {
-	width: 150px;
-	height: 150px;
+.home-get-involved-card {
 	display: flex;
-	flex-direction: column;
-	justify-content: center;
+	justify-content: space-evenly;
 	align-items: center;
 	gap: 10px;
-	background-color: var(--gray70);
-	color: var(--white);
+	padding: 25px;
+	border-style: solid;
+	border-color: var(--green14);
 	text-decoration: none;
 }
 
-.home-get-involved-link:hover {
-	background-color: var(--gray60);
+.fundraising {
+	margin-right: 20px;
+	border-width: 2px 2px 2px 0;
+	border-radius: 0 10px 10px 0;
+	background-image: linear-gradient(
+		40deg,
+		hsl(112deg 100% 81%) 0%,
+		hsl(112deg 100% 82%) 11%,
+		hsl(112deg 100% 83%) 22%,
+		hsl(112deg 100% 84%) 33%,
+		hsl(112deg 100% 86%) 44%,
+		hsl(112deg 100% 87%) 56%,
+		hsl(112deg 100% 88%) 67%,
+		hsl(112deg 100% 89%) 78%,
+		hsl(112deg 100% 90%) 89%,
+		hsl(112deg 100% 91%) 100%
+	);
 }
 
-.home-get-involved-link-icon {
-	font-size: 80px;
+.volunteer {
+	margin-left: 20px;
+	border-width: 2px 0 2px 2px;
+	border-radius: 10px 0 0 10px;
+	background-image: linear-gradient(
+		320deg,
+		hsl(112deg 100% 81%) 0%,
+		hsl(112deg 100% 82%) 11%,
+		hsl(112deg 100% 83%) 22%,
+		hsl(112deg 100% 84%) 33%,
+		hsl(112deg 100% 86%) 44%,
+		hsl(112deg 100% 87%) 56%,
+		hsl(112deg 100% 88%) 67%,
+		hsl(112deg 100% 89%) 78%,
+		hsl(112deg 100% 90%) 89%,
+		hsl(112deg 100% 91%) 100%
+	);
 }
 
-.home-get-involved-link-title {
+.fundraising:hover {
+	background-image: linear-gradient(
+		320deg,
+		hsl(112deg 100% 81%) 0%,
+		hsl(112deg 100% 82%) 11%,
+		hsl(112deg 100% 83%) 22%,
+		hsl(112deg 100% 84%) 33%,
+		hsl(112deg 100% 86%) 44%,
+		hsl(112deg 100% 87%) 56%,
+		hsl(112deg 100% 88%) 67%,
+		hsl(112deg 100% 89%) 78%,
+		hsl(112deg 100% 90%) 89%,
+		hsl(112deg 100% 91%) 100%
+	);
+}
+
+.volunteer:hover {
+	background-image: linear-gradient(
+		40deg,
+		hsl(112deg 100% 81%) 0%,
+		hsl(112deg 100% 82%) 11%,
+		hsl(112deg 100% 83%) 22%,
+		hsl(112deg 100% 84%) 33%,
+		hsl(112deg 100% 86%) 44%,
+		hsl(112deg 100% 87%) 56%,
+		hsl(112deg 100% 88%) 67%,
+		hsl(112deg 100% 89%) 78%,
+		hsl(112deg 100% 90%) 89%,
+		hsl(112deg 100% 91%) 100%
+	);
+}
+
+.home-get-involved-card-icon {
+	font-size: 90px;
+	color: var(--green12);
+}
+
+.home-get-involved-card-icon:hover {
+	color: var(--yellow-logo);
+}
+
+.home-get-involved-card:hover {
+	background-color: hsl(112, 100%, 81%);
+}
+
+.home-get-involved-card-subcontainer {
+	text-align: center;
+}
+
+.home-get-involved-card-title {
 	font-size: 22px;
+	font-weight: 800;
+	color: var(--green13);
+}
+
+.home-get-involved-card-title:hover {
+	color: var(--white);
+}
+
+.home-get-involved-card-summary {
 	font-weight: 600;
+	color: var(--green13);
+	font-size: 16px;
 }
 
 @media screen and (min-width: 768px) {
-	.home-get-involved-links-container {
-		gap: 40px;
+	.home-get-involved-cards-container {
+		grid-template-columns: 1fr 1fr;
+		grid-template-rows: 1fr;
+		padding-bottom: 0;
+		margin: 0 20px;
 	}
 
-	.home-get-involved-link {
-		width: 260px;
-		height: 180px;
+	.home-get-involved-card {
+		border-width: 2px 2px 0 2px;
+		border-style: solid;
+		border-color: var(--green14);
+		border-radius: 10px 10px 0 0;
+		background-color: var(--green11);
 	}
 
-	.home-get-involved-link-icon {
-		font-size: 80px;
+	.home-get-involved-card-subcontainer {
+		/* placeholder */
 	}
 
-	.home-get-involved-link-title {
-		font-size: 22px;
+	.home-get-involved-card-icon {
+		font-size: 120px;
+	}
+
+	.home-get-involved-card-title {
+		font-size: 28px;
+		font-weight: 800;
+	}
+
+	.home-get-involved-card-summary {
+		font-size: 18px;
 	}
 }
