--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -2,13 +2,13 @@
 	margin: 0 0 20px 0;
 	display: flex;
 	flex-direction: column;
-	gap: 20px;
+	/* gap: 20px; */
 }
 
 @media screen and (min-width: 768px) {
 	.home-page {
 		margin: 0 auto 40px auto;
-		gap: 30px;
+		/* gap: 30px; */
 	}
 }
 
