--- a/client/src/pages/HomePage/HomePage.css
+++ b/client/src/pages/HomePage/HomePage.css
@@ -1,19 +1,16 @@
 .home-page {
-	margin: 0 0 20px 0;
 	display: flex;
 	flex-direction: column;
-	/* gap: 20px; */
 }
 
 @media screen and (min-width: 768px) {
 	.home-page {
-		margin: 0 auto 40px auto;
-		/* gap: 30px; */
+		/* placeholder */
 	}
 }
 
 @media screen and (min-width: 1200px) {
 	.home-page {
-		margin: 0 auto 40px auto;
+		/* placeholder */
 	}
 }
