--- a/client/src/components/Header/Header.css
+++ b/client/src/components/Header/Header.css
@@ -1,5 +1,9 @@
 header {
-	background-color: var(--gray80);
+	background: linear-gradient(
+		180deg,
+		hsl(126, 73%, 5%) 0%,
+		hsl(126, 73%, 25%) 100%
+	);
 }
 
 header nav {
@@ -11,8 +15,21 @@ header nav {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: hsla(0, 0%, 70%, 0.96);
 	transform: translateY(-100vh);
+	background: linear-gradient(
+		340deg,
+		hsla(126, 76%, 5%, 0.97) 0%,
+		hsla(130, 56%, 9%, 0.97) 10%,
+		hsla(132, 65%, 13%, 0.97) 20%,
+		hsla(131, 71%, 17%, 0.97) 30%,
+		hsla(130, 74%, 21%, 0.97) 40%,
+		hsla(126, 73%, 25%, 0.97) 50%,
+		hsla(130, 74%, 21%, 0.97) 60%,
+		hsla(131, 71%, 17%, 0.97) 70%,
+		hsla(132, 65%, 13%, 0.97) 80%,
+		hsla(130, 56%, 9%, 0.97) 90%,
+		hsla(126, 76%, 5%, 0.97) 100%
+	);
 }
 
 header nav ul {
@@ -44,6 +61,7 @@ header nav ul {
 	font-size: 18px;
 	font-weight: 600;
 	transition: all ease-in-out 200ms;
+	color: var(--white);
 }
 
 .navigation-link:hover {
@@ -51,7 +69,7 @@ header nav ul {
 }
 
 .navigation-link.active {
-	color: var(--white);
+	color: var(--yellow-logo);
 }
 
 .navigation-link-image-container {
@@ -64,8 +82,12 @@ header nav ul {
 	outline: none;
 	border: none;
 	background: transparent;
-	color: var(--black);
+	color: var(--white);
 	cursor: pointer;
+}
+
+.navigation-menu-button:hover {
+	color: var(--yellow-logo);
 }
 
 /* to position the mobile navigation menu X close button */
@@ -109,6 +131,7 @@ header nav ul {
 
 .header-logo-container h2 {
 	font-size: 16px;
+	color: var(--white);
 }
 
 .header-logo-image-container {
@@ -124,6 +147,7 @@ header nav ul {
 
 .navigation-link-icon-container {
 	display: none;
+	color: var(--yellow-logo);
 }
 
 @media only screen and (min-width: 960px) {
@@ -135,7 +159,7 @@ header nav ul {
 		align-items: flex-end;
 		width: auto;
 		height: auto;
-		background-color: transparent;
+		background: transparent;
 		transform: none;
 	}
 
@@ -149,7 +173,7 @@ header nav ul {
 	}
 
 	.navigation-link.active {
-		color: var(--black);
+		color: var(--yellow-logo);
 	}
 
 	.navigation-link.active + .navigation-link-icon-container {
